--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+html {
+  scroll-behavior: smooth;
+}
 
 body {
   font-family: "Cormorant Garamond", serif;
@@ -136,24 +139,27 @@ ul.navbar-nav.mr-auto {
 
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
-  bottom: 3rem;
-  z-index: 10;
-}
-
-.menu .carousel-caption {
   bottom: 11rem;
   z-index: 10;
+   z-index: 10;
   font-family: "Cormorant Garamond";
 }
 
-.menu .carousel-caption h1 {
+
+ .carousel-caption h1 {
   font-size: 58px;
   user-select: none;
+  font-weight: 800;
 }
 
 /* Declare heights because of positioning of img element */
 .carousel-item {
   height: 32rem;
+}
+a.banner_view_menu_btn {
+    padding: 5px 30px;
+    border: 1px solid #fff;
+    color: #fff;
 }
 
 .carousel-item>img {
@@ -353,6 +359,15 @@ ul.navbar-nav.mr-auto {
   left: 10px;
   border-right: 2px solid #6c757d;
   width: 5%;
+}
+
+
+.contact_page .form-group span {
+  position: absolute;
+  top: 7px;
+  left: 10px;
+  border-right: 1px solid #6c757d;
+  width: 7%;
 }
 
 .contact_form input::placeholder {
@@ -1202,6 +1217,75 @@ p.opening_days {
     padding-top:1rem;
 }
 
+
+
+
+.contact_icon img {
+    width: 35px;
+}
+
+.contact_icon{
+  display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.contact_icon img:nth-of-type(2){
+       padding-top: 2rem;
+
+}
+.contact_icon img:nth-of-type(3){
+  
+    padding-top: 1.3rem;
+}
+
+.contact_icon img:nth-of-type(4){
+  
+    padding-top: 1.2rem;
+}
+
+
+.contact_left .contact_address .title {
+    font-size: 17px;
+    font-weight: 600;
+    color: #000;
+}
+
+.contact_left .contact_address p {
+        font-size: 15px;
+   
+    line-height: 18px;
+}
+
+.contact_form.contact_page .form-group {
+    position: relative;
+    margin-bottom: 13px !important;
+}
+
+.submit_form{
+  float: right;
+    position: relative;
+    top: 20px;
+}
+
+.contact_submit_btn {   
+     padding: 6px 50px;
+    background: #a51d23;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 400;
+    position: absolute;
+    cursor: pointer;
+    left: -55px;
+}
+
+.full_map_frame{
+  height:350px;
+}
+
+.main_full_map_frame {
+    height: 397px;
+}
 /* RESPONSIVE CSS
   -------------------------------------------------- */
 
@@ -1310,8 +1394,13 @@ p.opening_days {
 
   }
 
-
-
+.contact_form.contact_page .form-group span {
+    position: absolute;
+    top: 5px;
+    left: 6px;
+    border-right: 2px solid #6c757d;
+    width: 8%;
+}
 }
 
 /* Smartphones (portrait) ----------- */
@@ -1558,7 +1647,7 @@ p.opening_days {
   }
 
   .quotes img {
-    width: 40px;
+    width: 33px;
   }
 
 
@@ -1912,10 +2001,58 @@ img.left_menu_img {
   font-size: 14px;
 }
 
+.footer_section {
+    background-color: #000;
+    color: #fff;
+    /* padding: 62px; */
+    position: relative;
+    top: 30px;
+}
+
+.contact_form.contact_page {
+    padding-bottom: 45px;
+}
+
+.submit_form{
+
+    position: relative;
+   
+}
+
+.contact_page textarea#exampleFormControlTextarea1 {
+    height: 100px;
+}
+
+.contact_submit_btn {   
+    padding: 6px 50px;
+    background: #a51d23;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 400;
+    /* position: absolute; */
+    cursor: pointer;
+    /* left: -55px; */
+   top: 6rem;
+    left: -16rem;
+}
 
 
 }
 
+
+@media only screen and (max-width: 768px){
+.contact_form .form-group span {
+    position: absolute;
+    top: 5px;
+    left: 6px;
+    border-right: 2px solid #6c757d;
+    width: 8%;
+}
+
+.main_full_map_frame {
+    height: 244px !important;
+}
+}
 
 
 
@@ -1962,6 +2099,14 @@ img.left_menu_img {
 
   }
 
+  .contact_form.contact_page .form-group span {
+    position: absolute;
+    top: 5px;
+    left: 6px;
+    border-right: 2px solid #6c757d;
+    width: 10% !important;
+}
+
 }
 
 @media only screen and (min-width : 1024px) {
@@ -1974,7 +2119,7 @@ img.left_menu_img {
     margin-top: 0rem;
   }
 
-
+  
 
 }
 
@@ -1989,8 +2134,28 @@ img.left_menu_img {
     font-size: 45px;
     user-select: none;
 }
+.contact_form.contact_page .form-group span {
+    position: absolute;
+    top: 5px;
+    left: 6px;
+    border-right: 2px solid #6c757d;
+    width: 10% !important;
+}
+.main_full_map_frame {
+    height: 331px;
+}
 }
 
+/* 
+@media only screen and (min-width: 768px){
+  .contact_page .form-group span {
+    position: absolute;
+    top: 7px;
+    left: 10px;
+    border-right: 2px solid #6c757d;
+    width: 9%;
+}
+} */
 
 
 /* iPads (portrait and landscape) ----------- */
@@ -2366,6 +2531,7 @@ img.left_menu_img {
   .map_image {
     margin-top: 0px !important;
   }
+  
 
 
 /* 
@@ -2376,6 +2542,10 @@ img.left_menu_img {
     top: 11rem;
   } */
 
+
+ .logo img {
+    width: 10rem;
+  }
 
 
 }
@@ -2419,6 +2589,11 @@ img.left_menu_img {
     width: 100%;
     height: 450px;
   }
+   .logo img {
+    width: 10rem !important;
+  }
+
+
 
   .testimonial_body {
     top: 0% !important;
