--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -302,6 +302,13 @@ a.banner_view_menu_btn {
   line-height:45px;
   height: 50px;
 }
+  .menu_footer1 p{
+    padding-left: 10px;
+        padding-top: 1px;
+  }
+  .menu_footer1 .arrow_footer1{
+    padding-right: 0px;
+  }
 
 .menu_footer {
   display: flex;
@@ -403,6 +410,13 @@ a.banner_view_menu_btn {
   font-size: 14px;
   color: #6c757d;
 }
+
+   .contact_page.contact_form .form-group span i {
+     font-size: 12px;
+    color: #000000;
+    opacity: 1;
+    }
+
 
 .contact_form button {
   width: 45%;
@@ -1239,7 +1253,7 @@ p.opening_days {
 
 
 .contact_icon img {
-  width: 35px;
+  width: 50px;
 }
 
 .contact_icon {
@@ -1249,18 +1263,33 @@ p.opening_days {
 }
 
 .contact_icon img:nth-of-type(2) {
-  padding-top: 2rem;
+ padding-top: 2.3rem;
 
 }
+.content .contact_address:nth-of-type(2) {
+
+     padding-top: 0.5rem;
+}
+
 
 .contact_icon img:nth-of-type(3) {
 
-  padding-top: 1.3rem;
+  padding-top: 1rem;
+}
+
+.content .contact_address:nth-of-type(3) {
+
+  margin-top: 2rem;
 }
 
 .contact_icon img:nth-of-type(4) {
 
-  padding-top: 1.2rem;
+  padding-top: 1rem;
+}
+
+.content .contact_address:nth-of-type(4) {
+
+padding-top: 1.1rem;
 }
 
 
@@ -1272,8 +1301,10 @@ p.opening_days {
 
 .contact_left .contact_address p {
   font-size: 15px;
-
-  line-height: 18px;
+    line-height: 18px;
+    font-weight: 400;
+    /* margin: 0px; */
+    margin-top: -5px;
 }
 
 .contact_form.contact_page .form-group {
@@ -1304,6 +1335,10 @@ p.opening_days {
 
 .main_full_map_frame {
   height: 397px;
+}
+
+.contact_page input,.contact_page textarea {
+  border-radius: 0px;
 }
 
 /* RESPONSIVE CSS
@@ -1501,6 +1536,7 @@ p.opening_days {
 
     margin-bottom: 20px;
   }
+ 
 
   /* contact us section */
   .contact_form .contact_heading {
@@ -1822,7 +1858,7 @@ p.opening_days {
 
   .header_contact {
     display: flex;
-    padding-left: 10px;
+    padding-left: 9px;
   }
 
   .header_contact .contact {
@@ -1882,6 +1918,14 @@ p.opening_days {
     width: 6%;
   }
 
+  .contact_page.contact_form .form-group span{
+    position: absolute;
+    top: 7px;
+    left: 10px;
+    border-right: 0.1px solid #d0d0d0;
+    width: 6%;
+    opacity: 0.5;
+  }
   .contact_form button {
 
     background: transparent;
@@ -1910,7 +1954,7 @@ p.opening_days {
 
 @media only screen and (max-width : 540px) {
   .top_header {
-    padding: 0px;
+    padding: 0px 5px;
   }
 
   .top_header .row {
@@ -1922,35 +1966,35 @@ p.opening_days {
 
 
   .header_contact img {
-    width: 30px;
+    width: 30px !important;
   }
 
   .header_contact .contact {
 
 
-    left: 5px;
+    left: 5px ;
     margin: 0px;
   }
 
   .header_contact .contact p.call_us {
-    font-size: 15px;
-    line-height: 9px;
+    font-size: 14px !important;
+    line-height: 7px !important;
   }
 
 
   .header_contact .contact p.number {
-    font-size: 16px;
+    font-size: 15px !important;
 
   }
 
   .logo img {
-    width: 10rem;
+    max-width: 10rem !important;
 
   }
 
   .social .social_icon {
     padding: 0px;
-    width: 25px;
+    width: 25px !important;
   }
 
 
@@ -1972,6 +2016,7 @@ p.opening_days {
     margin-bottom: 30px;
   }
 
+ 
   .menu_section .arrow {
     margin-left: 108px;
   }
@@ -2061,6 +2106,7 @@ p.opening_days {
 }
 
 
+
 @media (min-width:481px) and (max-width:768px) {
   .top_header {
     padding: 0 5rem !important;
@@ -2074,11 +2120,7 @@ p.opening_days {
 
   }
 }
-  @media (min-width: 768px) {
-    .logo img {
-      width: 100px;
-    }
-  }
+ 
 
   @media (min-width: 991px) {
     .logo img {
@@ -2240,16 +2282,7 @@ p.opening_days {
 
   }
 
-  /* 
-@media only screen and (min-width: 768px){
-  .contact_page .form-group span {
-    position: absolute;
-    top: 7px;
-    left: 10px;
-    border-right: 2px solid #6c757d;
-    width: 9%;
-}
-} */
+
 
 
   /* iPads (portrait and landscape) ----------- */
@@ -2489,6 +2522,7 @@ p.opening_days {
       color: #6c757d;
     }
 
+  
     .contact_form .form {
       padding: 22px 74px 0px 45px;
     }
@@ -2865,8 +2899,4 @@ p.opening_days {
 
   }
 
-  /* iPhone 4 ----------- */
-  @media only screen and (-webkit-min-device-pixel-ratio : 1.5),
-  only screen and (min-device-pixel-ratio : 1.5) {
-    /* Styles */
-  }
+ 
